[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/misc_environment/star.png" type="Texture" id=1]
[ext_resource path="res://environment/Star.gd" type="Script" id=2]


[sub_resource type="BoxShape" id=1]
extents = Vector3( 2.09187, 2.26051, 0.827329 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.39
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3( 1, 1, 1 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
damping = 1.0

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
vertex_color_use_as_albedo = true
albedo_color = Color( 0.964706, 0.960784, 0.607843, 1 )

[sub_resource type="SphereMesh" id=5]
material = SubResource( 4 )
radius = 0.1
height = 0.2

[node name="Star" type="RigidBody"]
contacts_reported = 2
contact_monitor = true
sleeping = true
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.900698, 0.434445, 0, -0.434445, 0.900698, 0, 0, 0 )
shape = SubResource( 1 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.900698, 0.434446, 0, -0.434446, 0.900698, 0, 0, 0 )
alpha_cut = 2
frames = SubResource( 2 )

[node name="OmniLight" type="OmniLight" parent="."]
light_color = Color( 0.901961, 0.827451, 0.0431373, 1 )
light_energy = 2.0
light_bake_mode = 0
shadow_enabled = true
omni_range = 18.3204

[node name="Particles" type="Particles" parent="."]
lifetime = 2.03
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )
[connection signal="body_entered" from="." to="." method="_on_Star_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_Star_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Star_mouse_exited"]
